@@ -1,4 +1,4 @@
-$NetBSD$
+$NetBSD: distinfo,v 1.2 2001/04/21 02:08:36 wiz Exp $
 
-SHA1 (tscp173.zip) = fa8ef35268223fab1a85fd94131544ee01166e1e
-Size (tscp173.zip) = 68607 bytes
+SHA1 (tscp181.zip) = 61ebac540a4e9f3067d6682a4b6dfc5fa8993790
+Size (tscp181.zip) = 77019 bytes
